fix bracket spacing

--- a/public/scss/pages/Tautan.module.scss
+++ b/public/scss/pages/Tautan.module.scss
@@ -50,7 +50,8 @@
         margin: 0;
       }
 
-      img {
+      img 
+      {
         @include fixedSize(20px);
         margin-right: 16px;
       }
